
NEWS
====

Version 0.2.2 - xx March 2011

  * Alpha version
  * Spreadsheet: added cell-span management
  * tested with Python 3.2 - OK

Version 0.2.1 - 06 February 2011

  * Alpha version
  * added basic spreadsheet support
  * Spreadsheet: added sheet, row, column and cell management

Version 0.2.0 - 18 January 2011

  * Alpha version
  * create new empty odt, ods, odp, odg file
  * added template support - can create ott, ots, otp, otg files
  * open documents - ezodf.opendoc(filename)
  * create new documents - ezdof.newdoc(doctype, filename, template)
  * Text: added Paragraph, Heading, Span, Hyperlink, List, Section objects

Version 0.1.0 - 02 January 2011

  * Pre-Alpha version
  * open/saveas ODF documents
  * modify meta data