@@ -1,4 +1,0 @@
-[pytest]
-
-recursedirs = .hg docs examples ezodf specs dist
-
